# menstruation-telegram.hs

./: .gitignore  ChangeLog.md  menstruation-telegram.cabal  shell.nix
bot/: Client.hs  Main.hs
emoji/: Emoji.hs
lib/Menstruation/: Mensa.hs  Menu.hs  Pretty.hs  Response.hs  Settings.hs
lib/Menstruation/Internal/: Emoji.hs
src/: Main.hs  Types.hs
test/: Instances.hs  Spec.hs
